# SDCL

./: CMakeLists 0429.txt  CMakeLists.txt  SDCL_5 expl.odt  runSDCL 0428.cpp  runSDCL.cpp  solver.cpp  solver.h
1 results/: 1 results ver1.odt  1 results ver2.odt
SDCL/: SDCL 0430.cpp  SDCL 0502.cpp  SDCL 0505 report.h  SDCL 0506 ver2.cpp  SDCL 0506 ver2.h  SDCL 0506.cpp  SDCL 0508 5.cpp  SDCL 0508 5.h  SDCL 0510.cpp  SDCL 0511.cpp  SDCL.cpp  SDCL.h  SDCL0509.cpp  SDCL0509.h  SDCL_0430.cpp  SDCL_0505 report.cpp
resource/6dof_tabletop/: CMakeLists.txt
resource/7dof_exist_medium/: CMakeLists.txt
resource/twistycool_own/: CMakeLists.txt
utils/: environment 0428.h  environment 0429.h  environment.h
utils/src/: HighDofEnvironment.cpp  HyperBallEnvironment.cpp  environment2d 0429 ver2.cpp  environment2d 0429.cpp  environment2d.cpp  scenes.cpp
